--- a/数据处理（综合）.ipynb
+++ b/数据处理（综合）.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "4fd44b96",
    "metadata": {
     "ExecuteTime": {
@@ -10,19 +10,7 @@
      "start_time": "2023-07-27T10:41:16.271101500Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[2], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m#导入需要的包\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#导入需要的包\n",
     "import numpy as np\n",
@@ -39,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "d952bbec",
    "metadata": {},
    "outputs": [],
@@ -59,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "af9e4102",
    "metadata": {},
    "outputs": [],
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "8503b579",
    "metadata": {},
    "outputs": [],
@@ -144,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "07c954b7",
    "metadata": {},
    "outputs": [],
@@ -168,7 +156,7 @@
     "\t\telse:\n",
     "\t\t\tdt = dt.replace(minute=0)\n",
     "\t\t# 将处理后的时间添加到列表中\n",
-    "\t\tprocessed_times.append(dt.strftime(\"%H:%M\"))\n",
+    "\t\tprocessed_times.append(dt)\n",
     "\n",
     "\tdf['时间'] = processed_times\n",
     "\treturn df"
@@ -176,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "54b458cb",
    "metadata": {},
    "outputs": [],
@@ -210,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "3dfb491c",
    "metadata": {},
    "outputs": [],
@@ -234,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "44f1ef93",
    "metadata": {},
    "outputs": [],
@@ -259,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "e06be3b7",
    "metadata": {},
    "outputs": [],
@@ -276,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "40055c23",
    "metadata": {},
    "outputs": [],
@@ -288,20 +276,41 @@
     "\n",
     "    climate : DataFrame格式数据，包含天气信息\n",
     "    '''\n",
-    "\t#将不足五位的天气数据用0补足，如7:00 -> 07:00\n",
-    "\tclimate['时间'] = climate['时间'].str.zfill(5)\n",
+    "    \n",
+    "\tdf['交易日期']=pd.to_datetime(df['交易日期'])\n",
     "\n",
-    "\tdf['日期小时'] = df['交易日期'] + ' ' + df['时间'].str[:2]\n",
-    "\tclimate['日期小时'] = climate['date'] + ' ' + climate['时间'].str[:2]\n",
+    "\tprint(type(df['交易日期'].dt.strftime('%Y/%m/%d')),type(df['时间'][:2]))\n",
+    "\tdf['日期小时'] = df['交易日期'].dt.strftime('%Y/%m/%d') + ' ' + df['时间'].astype(str).str[:2]\n",
+    "\tclimate['日期小时'] = pd.to_datetime(climate['date']).dt.strftime('%Y/%m/%d') + ' ' + climate['时间'].astype(str).str[:2]\n",
     "\n",
     "\tmerged_df = pd.merge(df, climate, on='日期小时')\n",
-    "\tmerged_df = merged_df.drop(['学工号', '姓名', '日期小时', 'date', '时间_x', '时间_y', '重要天象'], axis=1)\n",
+    "\tmerged_df = merged_df.drop(['海平面大气压','相对湿度','气象站大气压', '姓名', '日期小时', 'date', '时间_x', '时间_y', '重要天象'], axis=1)\n",
     "\treturn merged_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "id": "cf99a067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#保存数据为csv文件\n",
+    "def save_data(df, file_path, file_name):\n",
+    "\t'''\n",
+    "    df : DataFrame格式数据\n",
+    "\n",
+    "    file_path : 文件路径名，即Data或temp\n",
+    "\n",
+    "    file_name : 文件名，如：lai.csv\n",
+    "    '''\n",
+    "\n",
+    "\tdf.to_csv(file_path + '/' + file_name+'.csv',encoding='gbk', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "f4c4853a",
    "metadata": {},
    "outputs": [],
@@ -334,24 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "3b3abe35",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 根据课表信息进行处理\n",
-    "def create_class(file_path, person):\n",
+    "def create_class(file_path, person_name):\n",
     "    '''\n",
     ":param file_path: 文件的读取路径\n",
     ":return: 个人课表\n",
     "'''\n",
     "\n",
     "    # 数据读取与拼接\n",
-    "    original_personal_class1 = load_data(file_path+'/'+person, '2022秋'+person)\n",
-    "    original_personal_class2 = load_data(file_path+'/'+person, '2022夏'+person)\n",
-    "    original_personal_class3 = load_data(file_path+'/'+person, '2023春'+person)\n",
-    "    original_personal_class = pd.concat([original_personal_class1, original_personal_class2], copy=True)\n",
-    "    original_personal_class = pd.concat([original_personal_class, original_personal_class3], copy=True)\n",
+    "    original_personal_class1 = load_data(file_path+'/'+person_name, '2022秋'+person_name)\n",
+    "    original_personal_class2 = load_data(file_path+'/'+person_name, '2022夏'+person_name)\n",
+    "    original_personal_class3 = load_data(file_path+'/'+person_name, '2023春'+person_name)\n",
+    "    original_personal_class = pd.concat([original_personal_class1, original_personal_class2], copy=True,ignore_index=True)\n",
+    "    original_personal_class = pd.concat([original_personal_class, original_personal_class3], copy=True,ignore_index=True)\n",
+    "    save_data(original_personal_class,'DataSet/课表/'+person_name,person_name)\n",
     "    # # 时间处理,将其转换为如2023/01/05（空缺补0）的形式\n",
     "    # original_personal_class['Start Date'] = pd.to_datetime(\n",
     "    # \toriginal_personal_class['Start Date'])\n",
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "42307bff",
    "metadata": {},
    "outputs": [],
@@ -395,7 +405,6 @@
     "def combine_class(df, personal_class):\n",
     "\n",
     "    temp=df\n",
-    "    temp['交易日期'] = pd.to_datetime(temp['交易日期'])\n",
     "    Noon=[]\n",
     "    Afternoon=[]\n",
     "    Evening=[]\n",
@@ -422,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "e6d933fd",
    "metadata": {},
    "outputs": [],
@@ -468,38 +477,27 @@
     "    ics_to_csv(ics_file_path, csv_file_path)\n",
     "    ics_file_path = './DataSet/课表/'+person_name+'/2023春'+person_name+'.ics'  # 替换为您的ICS文件路径\n",
     "    csv_file_path = './DataSet/课表/'+person_name+'/2023春'+person_name+'.csv'  # 替换为输出CSV文件的路径\n",
-    "    ics_to_csv(ics_file_path, csv_file_path)\n"
+    "    ics_to_csv(ics_file_path, csv_file_path)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf99a067",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#保存数据为csv文件\n",
-    "def save_data(df, file_path, person_name):\n",
-    "\t'''\n",
-    "    df : DataFrame格式数据\n",
-    "\n",
-    "    file_path : 文件路径名，即Data或temp\n",
-    "\n",
-    "    file_name : 文件名，如：lai.csv\n",
-    "    '''\n",
-    "\n",
-    "\tdf.to_csv('./' + file_path + '/' + person_name+'.csv',encoding='gbk', index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "837b588b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'> <class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
    "source": [
     "#通过更改文件名，处理不同组数据\n",
-    "person_name='zheng'\n",
+    "person_name='lai'\n",
     "df = load_data('DataSet/Data', person_name)\n",
     "climate = load_data('DataSet', 'climate')\n",
     "\n",
@@ -514,23 +512,23 @@
     "df = time2int(df)\n",
     "df = add_holiday(df)\n",
     "df = combine_climate(df, climate)\n",
+    "save_data(df, './DataSet/temp', 'temp1')\n",
     "df = add_timestamp(df)\n",
     "df = weather2num(df)\n",
     "transform_ics(person_name)\n",
     "personal_class=create_class('DataSet/课表',person_name)\n",
-    "print(personal_class)\n",
     "df = combine_class(df,personal_class)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "effb3972",
    "metadata": {},
    "outputs": [],
    "source": [
     "#保存到temp目录下\n",
-    "save_data(df, 'temp',person_name)"
+    "save_data(df, './DataSet/Final',person_name)"
    ]
   },
   {
