--- a/数据处理/数据处理（综合）.ipynb
+++ b/数据处理/数据处理（综合）.ipynb
@@ -315,7 +315,7 @@
     "    file_name : 文件名，如：lai.csv\n",
     "    '''\n",
     "    \n",
-    "    df.to_csv('../' +  file_path +'/' + file_name , sep= ',', encoding='gbk',index=False)"
+    "    df.to_csv('../' +  file_path +'/final/' + file_name , sep= ',', encoding='gbk',index=False)"
    ]
   },
   {
@@ -363,10 +363,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>美食林肠粉</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>学苑食堂主食三组（面条）</td>\n",
        "      <td>2023/4/25</td>\n",
-       "      <td>11:44</td>\n",
+       "      <td>17:30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>744.0</td>\n",
+       "      <td>756.9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1682415000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>阳光广式猪脚饭</td>\n",
+       "      <td>2023/4/25</td>\n",
+       "      <td>11:53</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>7</td>\n",
@@ -375,14 +391,14 @@
        "      <td>66</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
-       "      <td>1682394240.0</td>\n",
+       "      <td>1682394780.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19.4</td>\n",
-       "      <td>紫丁香餐吧副食一组（中西套餐）</td>\n",
+       "      <th>2</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>美食林肠粉</td>\n",
        "      <td>2023/4/24</td>\n",
-       "      <td>17:30</td>\n",
+       "      <td>17:31</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
@@ -391,14 +407,14 @@
        "      <td>16</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1682328600.0</td>\n",
+       "      <td>1682328660.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13.0</td>\n",
-       "      <td>学苑食堂香恋香拌砂锅</td>\n",
+       "      <th>3</th>\n",
+       "      <td>14.4</td>\n",
+       "      <td>阳光副食二组</td>\n",
        "      <td>2023/4/24</td>\n",
-       "      <td>11:53</td>\n",
+       "      <td>11:44</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>14</td>\n",
@@ -407,14 +423,14 @@
        "      <td>14</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
-       "      <td>1682308380.0</td>\n",
+       "      <td>1682307840.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>学苑食堂主食三组（面条）</td>\n",
+       "      <th>4</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>紫丁香餐吧主食一组</td>\n",
        "      <td>2023/4/23</td>\n",
-       "      <td>18:01</td>\n",
+       "      <td>17:36</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>9</td>\n",
@@ -423,23 +439,7 @@
        "      <td>18</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>1682244060.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13.8</td>\n",
-       "      <td>阳光小是小简餐</td>\n",
-       "      <td>2023/4/23</td>\n",
-       "      <td>11:55</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>758.3</td>\n",
-       "      <td>771.1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1682222100.0</td>\n",
+       "      <td>1682242560.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -458,118 +458,118 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>282</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>阳光主食一组</td>\n",
-       "      <td>2022/8/22</td>\n",
-       "      <td>17:19</td>\n",
-       "      <td>1</td>\n",
+       "      <th>290</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>一区饺子园主食一组</td>\n",
+       "      <td>2022/7/6</td>\n",
+       "      <td>11:44</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>738.6</td>\n",
-       "      <td>750.8</td>\n",
-       "      <td>83</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1661159940.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>283</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>民族餐厅山西饸饹面</td>\n",
-       "      <td>2022/8/22</td>\n",
-       "      <td>11:21</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>733.4</td>\n",
-       "      <td>745.5</td>\n",
-       "      <td>94</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1661138460.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>美食林川蜀源烤鱼</td>\n",
-       "      <td>2022/8/21</td>\n",
-       "      <td>18:08</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>738.8</td>\n",
-       "      <td>750.8</td>\n",
-       "      <td>83</td>\n",
+       "      <td>31</td>\n",
+       "      <td>741.4</td>\n",
+       "      <td>753.1</td>\n",
+       "      <td>66</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>1661076480.0</td>\n",
+       "      <td>1657079040.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>民族餐厅山西饸饹面</td>\n",
-       "      <td>2022/8/21</td>\n",
-       "      <td>11:03</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>739.6</td>\n",
-       "      <td>751.6</td>\n",
-       "      <td>78</td>\n",
+       "      <th>291</th>\n",
+       "      <td>3.75</td>\n",
+       "      <td>学苑食堂包子</td>\n",
+       "      <td>2022/7/6</td>\n",
+       "      <td>8:04</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1661050980.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>742.7</td>\n",
+       "      <td>754.6</td>\n",
+       "      <td>84</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1657065840.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>13.0</td>\n",
-       "      <td>美食林铁锅焖面</td>\n",
+       "      <th>292</th>\n",
+       "      <td>8.21</td>\n",
+       "      <td>学子副食一组</td>\n",
+       "      <td>2022/7/5</td>\n",
+       "      <td>11:55</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>742.1</td>\n",
+       "      <td>753.9</td>\n",
+       "      <td>74</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1656993300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>学苑食堂副食一组</td>\n",
+       "      <td>2022/7/5</td>\n",
+       "      <td>7:33</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>742.7</td>\n",
+       "      <td>754.6</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1656977580.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>学苑食堂香恋香拌砂锅</td>\n",
        "      <td>2022/7/3</td>\n",
-       "      <td>12:35</td>\n",
+       "      <td>17:20</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>28</td>\n",
-       "      <td>741.3</td>\n",
-       "      <td>753.1</td>\n",
-       "      <td>70</td>\n",
+       "      <td>740.5</td>\n",
+       "      <td>752.3</td>\n",
+       "      <td>66</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>1656822900.0</td>\n",
+       "      <td>1656840000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>287 rows × 13 columns</p>\n",
+       "<p>295 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      交易额             商户名称       交易日期   交易时间 星期 节假日  气温 气象站大气压 海平面大气压 相对湿度  \\\n",
-       "0    32.0            美食林肠粉  2023/4/25  11:44  2   0   7  742.7  755.4   66   \n",
-       "1    19.4  紫丁香餐吧副食一组（中西套餐）  2023/4/24  17:30  1   0  13  750.2  762.8   16   \n",
-       "2    13.0       学苑食堂香恋香拌砂锅  2023/4/24  11:53  1   0  14  754.0  766.6   14   \n",
-       "3     6.0     学苑食堂主食三组（面条）  2023/4/23  18:01  7   0   9  756.8  769.6   18   \n",
-       "4    13.8          阳光小是小简餐  2023/4/23  11:55  7   0  10  758.3  771.1   19   \n",
-       "..    ...              ...        ...    ... ..  ..  ..    ...    ...  ...   \n",
-       "282   7.0           阳光主食一组  2022/8/22  17:19  1   0  16  738.6  750.8   83   \n",
-       "283  16.0        民族餐厅山西饸饹面  2022/8/22  11:21  1   0  18  733.4  745.5   94   \n",
-       "284  15.0         美食林川蜀源烤鱼  2022/8/21  18:08  7   1  21  738.8  750.8   83   \n",
-       "285  10.0        民族餐厅山西饸饹面  2022/8/21  11:03  7   1  21  739.6  751.6   78   \n",
-       "286  13.0          美食林铁锅焖面   2022/7/3  12:35  7   1  28  741.3  753.1   70   \n",
+       "      交易额          商户名称       交易日期   交易时间 星期 节假日  气温 气象站大气压 海平面大气压 相对湿度 平均风速  \\\n",
+       "0     7.0  学苑食堂主食三组（面条）  2023/4/25  17:30  2   0   2  744.0  756.9  100    3   \n",
+       "1    16.0       阳光广式猪脚饭  2023/4/25  11:53  2   0   7  742.7  755.4   66   10   \n",
+       "2    16.0         美食林肠粉  2023/4/24  17:31  1   0  13  750.2  762.8   16    3   \n",
+       "3    14.4        阳光副食二组  2023/4/24  11:44  1   0  14  754.0  766.6   14    7   \n",
+       "4    25.0     紫丁香餐吧主食一组  2023/4/23  17:36  7   0   9  756.8  769.6   18    4   \n",
+       "..    ...           ...        ...    ... ..  ..  ..    ...    ...  ...  ...   \n",
+       "290  12.0     一区饺子园主食一组   2022/7/6  11:44  3   0  31  741.4  753.1   66    4   \n",
+       "291  3.75        学苑食堂包子   2022/7/6   8:04  3   0  26  742.7  754.6   84    3   \n",
+       "292  8.21        学子副食一组   2022/7/5  11:55  2   0  28  742.1  753.9   74    4   \n",
+       "293   5.5      学苑食堂副食一组   2022/7/5   7:33  2   0  25  742.7  754.6   83    2   \n",
+       "294  11.0    学苑食堂香恋香拌砂锅   2022/7/3  17:20  7   1  28  740.5  752.3   66    6   \n",
        "\n",
-       "    平均风速 特殊天象           时间戳  \n",
-       "0     10    0  1682394240.0  \n",
-       "1      3    0  1682328600.0  \n",
-       "2      7    0  1682308380.0  \n",
-       "3      4    0  1682244060.0  \n",
-       "4      8    0  1682222100.0  \n",
-       "..   ...  ...           ...  \n",
-       "282    6    0  1661159940.0  \n",
-       "283    7    1  1661138460.0  \n",
-       "284    4    0  1661076480.0  \n",
-       "285    3    1  1661050980.0  \n",
-       "286    6    0  1656822900.0  \n",
+       "    特殊天象           时间戳  \n",
+       "0      0  1682415000.0  \n",
+       "1      0  1682394780.0  \n",
+       "2      0  1682328660.0  \n",
+       "3      0  1682307840.0  \n",
+       "4      0  1682242560.0  \n",
+       "..   ...           ...  \n",
+       "290    0  1657079040.0  \n",
+       "291    0  1657065840.0  \n",
+       "292    0  1656993300.0  \n",
+       "293    1  1656977580.0  \n",
+       "294    0  1656840000.0  \n",
        "\n",
-       "[287 rows x 13 columns]"
+       "[295 rows x 13 columns]"
       ]
      },
      "execution_count": 13,
@@ -579,15 +579,15 @@
    ],
    "source": [
     "#通过更改文件名，处理不同组数据\n",
-    "df = load_data('Data','li.csv')\n",
+    "df = load_data('Data','chen.csv')\n",
     "climate = load_data('temp', 'climate.csv')\n",
     "\n",
     "abnormal_merchant = np.array(['淘乐学苑水果','学苑食堂霞姐饮品店','中央红小月亮门店5','中央红小月亮门店2'\\\n",
     "                             ,'中央红小月亮门店4','中央红小月亮门店6','中央红小月亮门店3','中央红小月亮正心楼'\\\n",
     "                             ,'中央红-水果','哈尔滨市南岗区淘乐水果捞店','中央红小月亮门店1','中央红-药店'\\\n",
     "                             ,'深澜网费对接','中央红-辣货','紫丁香餐吧酒水（聚鑫食品）','回味斋一餐厅酒水组'\\\n",
-    "                             ,'美芝林快客','灌制间'])\n",
-    "df = cut_data(df, '商户名称',405, abnormal_merchant)\n",
+    "                             ,'美芝林快客','灌制间','淘乐新果园','饺子园水吧'])\n",
+    "df = cut_data(df, '商户名称',352, abnormal_merchant)\n",
     "df = merge_data(df)\n",
     "df = time2int(df)\n",
     "df = add_holiday(df)\n",
@@ -607,7 +607,7 @@
    "outputs": [],
    "source": [
     "#保存到temp目录下\n",
-    "save_data(df, 'temp', '李（final）.csv')"
+    "save_data(df, 'temp', 'chen/data.csv')"
    ]
   }
  ],
